# etl-vouchers

./: LICENSE  README.md  pyproject.toml  setup.py  tasks.py
datasets/: barcodes.1622544683.csv  orders.1622544686.csv
etl_vouchers/: etl.py  exceptions.py  main.py  statistic.py  utils.py  validator.py
tests/: etl_test.py  statistic_test.py  utils_test.py  validator_test.py
