[tool.poetry]
name = "etl-vouchers"
version = "0.1.0"
description = ""
authors = ["vsheruda <vladyslav.sheruda@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.2"
pandas = "^1.2.4"
great-expectations = "^0.13.19"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
